--- a/style.css
+++ b/style.css
@@ -61,3 +61,14 @@ p{
     margin: 5px;
 }
 .item2 { order: 3; }
+#mainbutton {
+    margin-left: 5%;
+    margin-bottom: 2%;
+    margin-top: 5%;
+    background-color: #4CAF50;
+    color: rgb(255, 255, 255);
+    padding: 15px 20px;
+    display: inline-block;
+    font-size: 24px;
+    order: 4;
+}
